add vulnerable lodash

--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "@types/node": "^16.11.9",
     "aws-sdk": "^2.4",
     "jest": "^27.3.1"
+  },
+  "dependencies": {
+    "lodash": "^3.10.1"
   }
 }
